[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/activation/The Heart.PNG" type="Texture" id=1]
[ext_resource path="res://misc/activation/ActivationArea.gd" type="Script" id=2]
[ext_resource path="res://fonts/pixel_font.tres" type="DynamicFont" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 36.0

[node name="ActivationArea" type="Area2D" groups=["activation"]]
collision_mask = 0
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -1.5, 0 )
scale = Vector2( 2.57813, 2 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 3, 1 )
shape = SubResource( 1 )

[node name="Panel" type="Panel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -46.0
margin_top = -48.0
margin_right = 54.0
margin_bottom = -24.0
grow_horizontal = 0
grow_vertical = 0

[node name="Label" type="Label" parent="Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -41.0
margin_top = -6.0
margin_right = 62.0
margin_bottom = 10.0
rect_scale = Vector2( 0.814128, 0.845414 )
custom_fonts/font = ExtResource( 3 )
text = "Drop - Space"
align = 1
valign = 1

[node name="FinishTimer" type="Timer" parent="."]

[connection signal="body_entered" from="." to="." method="_on_ActivationArea_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_ActivationArea_body_exited"]
[connection signal="timeout" from="FinishTimer" to="." method="_on_FinishTimer_timeout"]
